tests/build/cases/widget/new_child_no_return_value.stderr
error[E0277]: the trait bound `(): UiNode` is not satisfied
 --> cases/widget/new_child_no_return_value.rs:5:20
  |
3 | #[widget($crate::test_widget)]
  | ------------------------------ required by a bound introduced by this call
4 | pub mod test_widget {
5 |     fn new_child() {}
  |                    ^^ the trait `UiNode` is not implemented for `()`
  |
note: required by a bound in `test_widget::__new_child::box_fix`
 --> cases/widget/new_child_no_return_value.rs:3:1
  |
3 | #[widget($crate::test_widget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `test_widget::__new_child::box_fix`
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
