tests/build/cases/widget/new_child_no_return_value.rs
use zero_ui::core::widget;

#[widget($crate::test_widget)]
pub mod test_widget {
    fn new_child() {}
}

fn main() {}
